# capital-bikeshare

./: .gitignore  CLAUDE.md  OVERNIGHT_IMPLEMENTATION_SUMMARY.md  README.md  app.py  main_create_maps.py  main_eda.py  pull_functions.py  pull_manage_data.py  pyproject.toml  requirements.txt  scratch_work.R
.github/: heartbeat.txt
.github/workflows/: bikeshare_etl.yml  heartbeat.yml  keep-alive.yml
deprecated/: main_create_maps.py  main_eda.py
scripts/: build_aggregates.py  geocode_stations.py  pull_data_from_cabi.py  pull_raw_data.py
src/capitalbike/app/: io.py
src/capitalbike/app/streamlit/: Home.py  StationExplorer.py  StationTable.py
src/capitalbike/app/streamlit/pages/: 1_Station_Explorer.py  2_Trip_Analytics.py  3_Station_Table.py  4_Time_Aggregation.py  BikeJourneys.py  StationExplorer.py
src/capitalbike/data/: ingest.py  raw_ingest.py  stations.py  summarize.py  transform.py
src/capitalbike/viz/: maps.py  station_analysis.py  timeseries.py
